# module-pgsql

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-pgsql-module.spec
cmake/: config.h.cmake
docs/: doxyfile.tmpl  mainpage.dox.tmpl  pgsql-module-doc.html
src/: Makefile.am  QorePGConnection.cc  QorePGConnection.cpp  QorePGConnection.h  QorePGMapper.cc  QorePGMapper.cpp  pgsql.cc  pgsql.cpp  pgsql.h  ql_pgsql.qpp  single-compilation-unit.cpp
test/: db-test.q  pgsql.qtest  sql-stmt.q
test/docker_test/: postgres_lib.sh  test-alpine.sh  test-ubuntu.sh  test.sh
